--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
 {% for member in site.data.pi %}
 <div class="jumbotron">
    <center>
@@ -55,12 +55,12 @@
   </ul>
 </div>
 {% endfor %}
-</div>
+</div> -->
 
 <div class="jumbotron">
   <h4>News</h4>
 
-  {% for article in site.data.news limit:3 %}
+  {% for article in site.data.news limit:5 %}
   <b>{{ article.date }}</b>
     <p>{{ article.headline }}</p>
   {% endfor %}
