--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<br/>
+<!-- <br/>
 <section id="footer">
 <div class="container-footer">
   <div class="panel-footer">
@@ -25,4 +25,4 @@
 </div>
 
 <script src="{{ "/assets/javascript/bootstrap/jquery.min.js" | relative_url }}"></script>
-<script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
+<script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script> -->
