--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -49,13 +49,25 @@
   <li> {{ member.education2short | replace: "-","&#8211;"}} </li>
   <li> {{ member.education3short | replace: "-","&#8211;"}} </li>
   <li> {{ member.education4short | replace: "-","&#8211;"}} </li>
-  <!-- <li> {{ member.education5short | replace: "-","&#8211;"}} </li> -->
+  <li> {{ member.education5short | replace: "-","&#8211;"}} </li> 
   <li> {{ member.education6short | replace: "-","&#8211;"}} </li>
   {% endif %}
   </ul>
 </div>
 {% endfor %}
 </div> -->
+
+<div class="jumbotron">
+  <h4>Upcoming Events</h4>
+
+  {% for article in site.data.upcoming limit:5 %}
+  <b>{{ article.date }}</b>
+    <p>{{ article.headline }}</p>
+  {% endfor %}
+  
+  <!-- <h5><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h5> -->
+
+</div>
 
 <div class="jumbotron">
   <h4>News</h4>
