--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -60,7 +60,8 @@
 <div class="jumbotron">
   <h4>Upcoming Events</h4>
 
-  <p> Students are running a weekly lunch seminar. Check <a href="https://yaletheorystudents.github.io" target="_blank">Yale Student Theory Lunch</a> for more details.</p>
+  <p> Students are running a weekly lunch seminar. Check <a href="https://yaletheorystudents.github.io" target="_blank">Yale Theory Student Seminar
+  </a> for more details.</p>
 
   {% for article in site.data.upcoming limit:5 %}
   <b>{{ article.date }}</b>
