--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -77,9 +77,14 @@
 
   {% for article in site.data.news limit:5 %}
   <b>{{ article.date }}</b>
-    <p>{{ article.headline }}</p>
+    
+  {% if article.link == null %}
+  <p>{{article.headline}}</p>
+  {% else %}
+<p><a href="{{ article.link }}">{{ article.headline }}</a></p>
+  {% endif %}
   {% endfor %}
   
-  <h5><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h5>
+  <h5><a href="{{ site.url }}{{ site.baseurl }}/news.html">... see all News</a></h5>
 
 </div>
